2007-01-24  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/sdr-cache/ipmi-sdr-cache-create.c
	(ipmi_sdr_cache_create): Fix record count corner case.
	
2007-01-23  Albert Chu <chu11@llnl.gov>

	* common/doc/manpage-common-ignore-sdr-cache.man: New file.

	* common/src/tool-cmdline-common.h,
	common/src/tool-cmdline-common.c: Add --ignore-sdr-cache support.

	* ipmi-fru/, ipmi-sel/: Support --ignore-sdr-cache option.

	* Adjust argp option groups in all tools.

2007-01-22  Albert Chu <chu11@llnl.gov>

	* ipmimonitoring/src/: Various consistency to other tools fixes.
	
2007-01-22  Albert Chu <chu11@llnl.gov>

	* common/src/tool-common.c (ipmi_open): Try devices more intelligently.

	* libfreeipmi/include/freeipmi/locate/ipmi-locate.h,
	libfreeipmi/src/locate/ipmi-locate.c
	(ipmi_locate_discover_device_info): New function.

	* libfreeipmi/src/locate/ipmi-locate.c
	(_ipmi_locate_get_device_info): Add flag to try/not-try defaults.

2008-01-22  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api/ipmi-api.c (ipmi_ctx_open_inband): Remove
	legacy requirement for required SSIF driver path.
	
2008-01-22  Albert Chu <chu11@llnl.gov>

        * common/doc/manpage-common-inband.man: Tweak english.
	
2008-01-22  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/sdr-cache/ipmi-sdr-cache.c: Fix "parmaeters" typo.
	
2008-01-22  A Balamurugan  <bala@zresearch.com>

	* common/doc/manpage-common-inband.man: updated.

	* ipmi-locate/src/ipmi-locate.c: displays device-address with hex
	prefix.

2008-01-16  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/driver/ipmi-ssif-driver.c: Add more debugging.
	Remove inlineness for debugging.
	
2008-01-09  Albert Chu <chu11@llnl.gov>

	* freeipmi.spec.in: Obsolete older freeipmi-ipmimonitoring
	subpackage.
	
2008-01-03  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/sdr-cache/: Use macros instead of hard coded
	index numbers.

	* ipmi-locate/ipmi-locate.8.pre.in,
	ipmi-chassis/ipmi-chassis.8.pre.in: Update description.
